# GrammaAnalysis

./: .gitignore  CMakeLists.txt  auto_cmake.sh
LabReport/: ReportSrc.md
include/: Gramma.h  gramma.h  grammar.h  syntax.h
src/: LL1Syntax.cpp  LR1Syntax.cpp  global.c  gramma.cpp  grammar.cpp  main.c  main.cpp  syntax.cpp
test/: Grammar2.txt  Grammar3.txt
